--- a/style/main.css
+++ b/style/main.css
@@ -48,7 +48,7 @@ header nav a:hover {
   font-size: 16px;
   background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50) 100%), url('/img/Sofa_assassino.jpg');
 
-  height: 400px;
+  height: 600px;
   background-size: cover;
 
   display: flex;
@@ -58,9 +58,45 @@ header nav a:hover {
 }
 
 .filme-principal .sinopse {
+  margin-top: 10px;
   margin-bottom: 40px;
 }
 
-.title {
-  font-size: 30px;
+.filme-principal .title {
+  margin-top: 15%;
+  font-size: 40px;
+  font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif;
+}
+
+
+/*Botao*/
+.botao {
+  background-color: rgba(0, 0, 0, .50);
+  border: none;
+  color: white;
+
+  padding: 10px 25px;
+  margin-right: 15px;
+  font-size: 12px;
+
+  cursor: pointer;
+  transition: .4s ease all;
+}
+
+.botao:hover {
+  background-color: rgb(240, 240, 240);
+  color: black;
+}
+
+.botao i {
+  margin-right: 8px;
+}
+
+/*CONTAINER*/
+.container {
+  margin-left: 20px;
+}
+
+.filme-principal .container {
+  width: 80%;
 }
